# V4-link

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
build-release/tests/: Makefile  v4link_minimal  v4link_minimal.stripped  v4link_test  v4link_test.stripped
build-release/v4/: Makefile  test_api_extensions  test_arena  test_call  test_memory  test_return_stack  test_sys  test_vm  test_vm_arena  test_vm_c
include/v4link/: errors.def  link.h  link.hpp  protocol.hpp
include/v4link/internal/: relocation.hpp
src/: crc8.cpp  crc8.hpp  frame.cpp  frame.hpp  link.cpp  link_c_api.cpp
tests/: CMakeLists.txt  minimal_binary.cpp  test_link.cpp  test_relocation.cpp
